# Synaxis

./: .dockerignore  .env.example  .gitignore  README.md  REPORT.md  pyproject.toml  pyrightconfig.json  ruff.toml
benchmarks/: load_test_scenarios.py
docker/: Dockerfile.cache  Dockerfile.node  Dockerfile.queue  docker-compose.yml  prometheus.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  api_spec.yaml
src/: __init__.py  cache_main.py  main.py  queue_main.py
src/communication/: __init__.py  failure_detector.py  message_passing.py
src/communications/: __init__.py  failure_detector.py  message_passing.py
src/consensus/: __init__.py  pbft.py  raft.py
src/consensuses/: __init__.py  pbft.py  raft.py
src/nodes/: __init__.py  base_node.py  cache_node.py  lock_manager.py  queue_node.py
src/utils/: __init__.py  config.py  consistent_hash.py  metrics.py
tests/: conftest.py
tests/integration/: test_01_lock_raft_consensus.py  test_02_queue_consistent_hash.py  test_03_cache_mesi.py  test_04_failure_scenarios.py  test_05_health_endpoints.py  test_lock_integration.py
tests/performance/: test_01_lock_performance.py  test_02_queue_performance.py  test_03_cache_performance.py  test_performance.py
tests/unit/: test_01_raft.py  test_02_consistent_hash.py  test_03_mesi.py  test_04_wal.py  test_05_pbft.py  test_cache.py  test_consensus.py  test_queue.py  test_utils.py
utils/: testing.py
