[project]
name = "Synaxis"
version = "0.1.0"
description = "Distributed Synchronization System"
readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.13.2",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "ormsgpack>=1.11.0",
    "redis>=6.2.0",
    "prometheus-client>=0.22.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.32.1",
    "locust>=2.42.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
